--- a/pom.xml
+++ b/pom.xml
@@ -43,10 +43,12 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.itextpdf/itext7-core -->
 		<dependency>
 			<groupId>com.itextpdf</groupId>
-			<artifactId>itextpdf</artifactId>
-			<version>5.5.13.3</version>
+			<artifactId>itext7-core</artifactId>
+			<version>8.0.1</version>
+			<type>pom</type>
 		</dependency>
 	</dependencies>
 
