add https configuration and new port for ssl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+server.ssl.key-store=/etc/letsencrypt/live/punchy.app/springboot.p12
+server.ssl.key-store-password=Felix8112
+server.ssl.key-store-type=pkcs12
+server.ssl.key-alias=springboot
+server.ssl.key-password=
+server.port=8443
+
