--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,6 @@ spring.jpa.properties.hibernate.format_sql=true
 server.ssl.key-store=/etc/letsencrypt/live/punchy.app/springboot.p12
 server.ssl.key-store-password=Felix8112
 server.ssl.key-store-type=pkcs12
-server.ssl.key-alias=springboot
-server.ssl.key-password=
+# server.ssl.key-alias=springboot
 server.port=8443
 
