--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
 			<version>8.0.1</version>
 			<type>pom</type>
 		</dependency>
+
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.11</version>
+		</dependency>
 	</dependencies>
 
 	<build>
