--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
 			<version>8.0.1</version>
 			<type>pom</type>
 		</dependency>
+
+		<dependency>
+			<groupId>com.sendgrid</groupId>
+			<artifactId>sendgrid-java</artifactId>
+			<version>4.9.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
